# SpaceDATAProject_GOUAULT_Thibault

./: .buildinfo  .pdm-python  README.md  genindex.html  githubproject.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  python_project_template.dummy.html  python_project_template.html  search.html  searchindex.js  tasks.json
.github/workflows/: ci.yml
_sources/: index.rst.txt  python_project_template.dummy.rst.txt  python_project_template.rst.txt
docs/: conf.py  githubproject.rst  python_project_template.rst
docs/_build/doctrees/: environment.pickle  githubproject.doctree  index.doctree  modules.doctree  python_project_template.doctree  python_project_template.dummy.doctree
docs/_build/doctrees/source/: githubproject.doctree  modules.doctree  python_project_template.doctree
docs/_build/html/: .buildinfo  genindex.html  githubproject.html  index.html  modules.html  objects.inv  py-modindex.html  python_project_template.dummy.html  python_project_template.html  search.html  searchindex.js
docs/_build/html/_sources/: modules.rst.txt  python_project_template.dummy.rst.txt
docs/_build/html/source/: githubproject.html  modules.html  python_project_template.html
source/: githubproject.html  modules.html  python_project_template.html
src/python_project_template/: dummy.py
tests/python_project_template/: test_dummy.py
