[project]
requires-python = ">=3.11" 
name = "GithubProject"
description = "school project in space data class"
authors = [
    {name = "thibault GOUAULT", email = "thibault.gouault@estaca.eu"},
]
version = "0.1.0"
dependencies = [
    "pydantic>=2.6.4",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
]
readme = "README.md"
license = {text = "MIT"}


[tool.ruff]
line-length = 88
exclude = ["venv", ".venv", "build", "dist"]


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
doc = [
    "sphinx>=8.0.2",
    "sphinxcontrib-apidoc>=0.5.0",
    "sphinx-rtd-theme>=3.0.0rc1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pdm.lock]
targets = [
    { os = "any", python = ">=3.11", platform = "any" }
]
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"




[dependency-groups]
dev = [
    "ruff>=0.8.3",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "pdm==2.20.1",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
doc = [
    "sphinx>=8.0.2",
    "sphinxcontrib-apidoc>=0.5.0",
    "sphinx-rtd-theme>=3.0.0rc1",
]
